fix: improve accessibility of breadcrumb for better readability.

--- a/css/styles.css
+++ b/css/styles.css
@@ -167,7 +167,7 @@ nav h1 a {
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-  color: #0275d8;
+  color: #014d8e;
   text-decoration: none;
 }
 
